# archive

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
archive/: __init__.py  __main__.py  utils.py
archive/generics/: cloud.py  models.py  scraper.py
archive/loksabha/: models.py  scraper.py
archive/rajyasabha/: models.py  scraper.py
