[tool.poetry]
name = "archive"
version = "0.1.0"
description = "Data collection and analysis tools for CMHLP's Public Archive"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"
httpx = "^0.24.0"
yarl = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
